--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # CMake
+**/cmake-build*/
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -82,3 +83,4 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+cmake-
