--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/
 
 # Generated files
 .idea/**/contentModel.xml
@@ -71,7 +72,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # CMake
-**/cmake-build*/
+cmake-build*/
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
