--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "task1/googletest"]
-	path = task1/googletest
+[submodule "googletest"]
+	path = googletest
 	url = https://github.com/google/googletest.git
