--- a/task2/CMakeLists.txt
+++ b/task2/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 #add_subdirectory(../googletest build)
 
 #include_directories(../googletest/include)
-set(SRC src/main.cpp src/worker.h src/workers.cpp src/workers.h src/workflowParser.cpp src/workflowParser.h src/workflowExecutor.cpp src/workflowExecutor.h src/argsParser.cpp src/argsParser.h)
+set(SRC src/main.cpp src/worker.h src/workers.cpp src/workers.h src/workflowParser.cpp src/workflowParser.h src/workflowExecutor.cpp src/workflowExecutor.h src/argsParser.cpp src/argsParser.h src/worker.cpp)
 add_executable(task2 ${SRC})
 #target_link_libraries(task2 gtest gtest_main)
