add new exception

--- a/java-task2/build.gradle
+++ b/java-task2/build.gradle
@@ -25,3 +25,7 @@ test {
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+apply plugin: 'java'
+sourceCompatibility = 15
+targetCompatibility = 15
